--- a/README
+++ b/README
@@ -1,12 +1,3 @@
 # MPSolve.jl
-This repository contains the Julia interface to the MPSolve
-polynomial rootfinder. You can install it in your Julia environment
-by typing 
-```
- julia> Pkg.clone("git://github.com/robol/MPSolve.jl.git")
-```
-Notice that, in order to use the package, you will need to have
-libmps available on the system. See the official [MPSolve website](http://numpi.dm.unipi.it/mpsolve/)
-for instructions on getting MPSolve up and running. 
-
+This repository contains the Julia interface to the [MPSolve](https://github.com/robol/MPSolve) polynomial rootfinder.
 
